fix uneven btns on pricing page

--- a/public/prod/website.css
+++ b/public/prod/website.css
@@ -101,7 +101,7 @@ html {
 @media only screen and (min-width: 1025px) {
   .eliteList.list {
     padding-top: 0vh;
-    margin: 5vh 0 19vh 0; } }
+    margin: -3vh 0 19vh 0; } }
 
 @media only screen and (min-width: 1025px) {
   ul.proList.list {
