--- a/public/stylesheets/sass/_pricing.sass
+++ b/public/stylesheets/sass/_pricing.sass
@@ -93,7 +93,7 @@ p#elite
 .eliteList.list
   @include desktop
     padding-top: 0vh
-    margin: 5vh 0 19vh 0
+    margin: -3vh 0 19vh 0
 
 ul.proList.list
   @include desktop
